# dhairya_2201640100134

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/edgeviewer/: CameraController.kt  FrameProcessor.kt  GlRenderer.kt  MainActivity.kt  NativePipeline.kt  TextureViewRenderer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: development_plan.md  generation_prompt.txt
gl/: README.md
jni/: CMakeLists.txt
jni/src/: gl_texture_uploader.cpp  gl_texture_uploader.hpp  native_pipeline.cpp  opencv_processor.cpp  opencv_processor.hpp
web/: index.html  package.json  tsconfig.json
web/src/: index.ts
